aliados/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aliados
  namespace: mauriciovelez
  labels:
    app: aliados
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aliados
  template:
    metadata:
      labels:
        app: aliados
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: aliados
          image: datara.azurecr.io/mauriciovelez-aliados:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
