aliados/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aliados
  namespace: mauriciovelez
  labels:
    app: aliados
spec:
  type: ClusterIP
  selector:
    app: aliados
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
